# internal/app/model/const.go
@@ -1,3 +1,7 @@
 package model
 
 const ImageBucketName = "image-bucket"
+
+const (
+	DefaultBlockContent = "default_block"
+)
